fluxcd/apps/production/archlinux/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: archlinux
  annotations:
    linkerd.io/inject: enabled
