fluxcd/apps/production/archlinux/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: directory-listing
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - aur-directory
      - mirror-directory
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mirror-sync-egress
spec:
  podSelector:
    matchLabels:
      app: mirror-sync
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
    ports:
    - port: 873
      protocol: TCP
    - port: 443
      protocol: TCP
